# macro-recorder

./: .gitignore  README.md  gui.py  main.py  pyproject.toml
src/: audio.py  interaction.py  recorder.py  screen.py
